Grid Index corrientes directores galeria

--- a/Pages/Directores.html
+++ b/Pages/Directores.html
@@ -36,14 +36,12 @@
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, laboriosam similique, voluptatem, et eligendi quos earum asperiores sed ad commodi magni. Adipisci nihil tenetur, magnam dolores similique sequi quaerat optio.
                 </p>
             
-            <div class="container-fluid">
-                <div class="row justify-content-around">
-                     <div class="col-md-3 col-sm-6 col-xs-6"><img src="../Imagenes/9.jpg" class="img"></div>
-                     <div class="col-md-3 col-sm-6 col-xs-6"><img src="../Imagenes/3.jpg" alt="" class="img"></div>
-                     <div class="col-md-3 col-sm-6 col-xs-6"><img src="../Imagenes/9.jpg" alt="" class="img"></div>
-                     <div class="col-md-3 col-sm-6 col-xs-6"><img src="../Imagenes/3.jpg" alt=""class="img"></div>
+                <div class="gridFotos">
+                    <img src="../Imagenes/9.jpg" alt="" class="gridFotosImage">
+                    <img src="../Imagenes/9.jpg" alt="" class="gridFotosImage"> 
+                    <img src="../Imagenes/3.jpg" alt="" class="gridFotosImage">        
+                    <img src="../Imagenes/3.jpg" alt="" class="gridFotosImage">
                 </div>
-            </div>    
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores nesciunt ipsum sit odio amet, quibusdam ipsa officiis tenetur, incidunt explicabo nulla alias, labore veniam? Velit voluptate aliquam ea dolor consequuntur!
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, veritatis. Ipsa fugit id iusto eius in maxime odit esse veniam, earum nesciunt alias non eum! Praesentium iusto placeat tempore iure.
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem, consequuntur officia quia aut totam reiciendis quaerat eum harum. Et soluta ipsa odio vitae ea accusantium praesentium facere dolorum, illo maxime.
