--- a/Pages/Corrientes.html
+++ b/Pages/Corrientes.html
@@ -15,18 +15,33 @@
 <body class="body">
     <header class="header">
             
-        <h1>CineArte.com</h1>
-   
-      <ul class="nav justify-content-around">
-         <li class="nav-item"><a href="../index.html" class="nav-link">Inicio</a></li>
-         <li class="nav.item"><a href="../Pages/Corrientes.html" class="nav-link">Corrientes</a></li> 
-         <li class="nav-item"><a href="../Pages/Directores.html" class="nav-link">Directores</a></li> 
-         <li class="nav-item"><a href="../Pages/Galería.html" class="nav-link">Galería</a></li>
-         <li class="nav-item"><a href="../Pages/Contacto.html" class="nav-link">Contacto</a></li> 
-      </ul>
-
-   
+        <h1>CineArte.com</h1> 
+        
 </header>    
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" style="color: #fc8506; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="../index.html">CineArte.com</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: #fc8506;">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav";>
+          <ul class="navbar-nav justify-content-around flex-grow-1 pe-3">
+          <li class="nav-item">
+            <a class="nav-link" style="color: #fc8506; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="../Pages/Corrientes.html">Corrientes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: #fc8506; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="../Pages/Directores.html">Directores</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: #fc8506; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="../Pages/Galería.html">Galería</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: #fc8506;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="../Pages/Contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav> 
         <section class="section">
             <h2>Corrientes cinematográficas</h2>
             <h3>Los Pioneros</h3>
@@ -62,7 +77,7 @@
             <ul class="footer">
                 <li>Política de privacidad</li>
                 <li>Aviso legal</li>
-                <li><a href="./Pages/Contacto.html">Contacto</a></li> 
+                <li><a href="../Pages/Contacto.html">Contacto</a></li> 
                 <li>Redes Sociales</li>
             </ul>
             <h6>2021 @ CineArte.com</h6>
